--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - "8081:8080"
     volumes:
       - .:/app
+      - $GOPATH/pkg/mod:/go/pkg/mod
     depends_on:
       - db
   db:
