--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -34,7 +34,7 @@ jobs:
       run: go build -v .
 
     - name: Test
-      run: go test -v .
+      run: go test -v ./...
 
     - uses: akhileshns/heroku-deploy@v3.12.12
       if: github.event_name == 'push' && github.ref == 'refs/heads/staging'
