added make mock-db to go.yaml file

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -35,6 +35,7 @@ jobs:
 
     - name: Test
       run: |
+        go get github.com/golang/mock/mockgen
         make mock-db
         go test -v ./...
 
