--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -5,9 +5,10 @@ on:
     branches: [ master, staging ]
   pull_request:
     branches: [ master, staging ]
+env:
+  JWT_SECRET: KNSDBJhjsdh47
 
 jobs:
-
   build:
     name: Build
     runs-on: ubuntu-latest
@@ -45,4 +46,6 @@ jobs:
         heroku_api_key: ${{secrets.HEROKU_API_KEY}}
         heroku_app_name:  "rentals-api"
         heroku_email: ${{secrets.TAMBARIE_EMAIL}}
+
+
 
