--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [ master, staging ]
 env:
-  JWT_SECRET: KNSDBJhjsdh47
+  JWT_SECRET: ${{secrets.JWT_SECRET}}
 
 jobs:
   build:
